--- a/images.html
+++ b/images.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Search</title>
+    <title>Images</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href="#">Advanced Options</a></li>
+                <li><a href="advance_search.html">Advance Search</a></li>
             </ul>
             <a href="https://google.com/"><img class="google-icon" src="images/google-icon.png" alt="google-icon"></a>
 
@@ -25,6 +25,7 @@
             <div class="search-features">
                 <form action="https://google.com/search">
                     <input id="search-bar" type="text" name="q">
+                    <p></p>
                     <input type="hidden" name="tbm" value="isch">
                     <input class="search-btn" type="submit" value="Images Search">
                     <input class="search-btn" type="submit" value="I'm Feeling Lucky">
