--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="images.html">Images</a></li>
-                <li>Advanced Options</li>
+                <li><a href="advance_search.html">Advance Search</a></li>
             </ul>
             <a href="https://google.com/"><img class="google-icon" src="images/google-icon.png" alt="google-icon"></a>
 
