--- a/advance_search.html
+++ b/advance_search.html
@@ -8,28 +8,76 @@
 
 <body>
     <header>
+        <img class="logo" src="images/logo.png" alt="">
         <nav>
+
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="images.html">Images</a></li>
                 <li><a href="#">Advance Search</a></li>
             </ul>
-            <a href="https://google.com/"><img class="google-icon" src="images/google-icon.png" alt="google-icon"></a>
         </nav>
     </header>
-    <section class="main-section">
+    <div class="head-title">
         <h2>Advance Search</h2>
-        <div class="container">
-            <form action="https://google.com/search">
-                <input type="text" name="as_q">
-                <input type="text" name="as_epq">
-                <input type="text" name="as_oq">
-                <input type="text" name="as_eq">
-                <input type="text" name="as_nlo">
-                <input type="text" name="as_nhi">
-                <input type="submit" value="Google Search">
-            </form>
-        </div>
+    </div>
+
+    <hr>
+    <div class="p-after-hr">
+        <p>Find pages with...</p>
+    </div>
+    <section class="main-section">
+        <form autocomplete="off" class="form0" action="https://google.com/search">
+            <table>
+                <tbody>
+                    <tr>
+                        <td><label for="1st-input">all these words:</label></td>
+                        <td class="td-A"><input type="text" id="1st-input" name="as_q"></td>
+                        <td class="td-A">
+                            <p>Type the important words: <span class="span-monospace">tri-colour rat terrier</span>>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="2nd-input">this exact word or phrase:</label></td>
+                        <td class="td-A"><input type="text" id="2nd-input" name="as_epq"></td>
+                        <td class="td-A">
+                            <p>Put exact words in quotes: <span class="span-monospace">"rat terrier"</span> </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="3rd-input">any of these words:</label></td>
+                        <td class="td-A"><input type="text" id="3rd-input" name="as_oq"></td>
+                        <td class="td-A">
+                            <p>Type OR between all the words you want: <span class="span-monospace">miniature OR
+                                    standard</span>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="4th-input">none of these words:</label></td>
+                        <td class="td-A"><input type="text" id="4th-input" name="as_eq"></td>
+                        <td class="td-A">
+                            <p>Put a minus sign just before words that you don't want: <span
+                                    class="span-monospace">-rodent, -"Jack Russell"</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="5th-input">numbers ranging from:</label></td>
+                        <td class="td-A"><input id="last-input1" type="text" id="5th-input" name="as_nlo"><label
+                                for="6th-input"> to
+                            </label><input id="last-input2" type="text" id="5th-input" name="as_nlo"></td>
+                        <td class="td-A">
+                            <p>Put two full stops between the numbers and add a unit of measurement: <span
+                                    class="span-monospace">10..35 kg,
+                                    £300..£500, 2010..2011</span></p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <hr>
+            <input class="btn-submit" type="submit" value="Advance Search">
+        </form>
     </section>
 
 
