--- a/advance_search.html
+++ b/advance_search.html
@@ -34,7 +34,7 @@
                         <td><label for="1st-input">all these words:</label></td>
                         <td class="td-A"><input type="text" id="1st-input" name="as_q"></td>
                         <td class="td-A">
-                            <p>Type the important words: <span class="span-monospace">tri-colour rat terrier</span>>
+                            <p>Type the important words: <span class="span-monospace">tri-colour rat terrier</span>.
                             </p>
                         </td>
                     </tr>
@@ -42,7 +42,7 @@
                         <td><label for="2nd-input">this exact word or phrase:</label></td>
                         <td class="td-A"><input type="text" id="2nd-input" name="as_epq"></td>
                         <td class="td-A">
-                            <p>Put exact words in quotes: <span class="span-monospace">"rat terrier"</span> </p>
+                            <p>Put exact words in quotes: <span class="span-monospace">"rat terrier"</span>.</p>
                         </td>
                     </tr>
                     <tr>
@@ -50,7 +50,7 @@
                         <td class="td-A"><input type="text" id="3rd-input" name="as_oq"></td>
                         <td class="td-A">
                             <p>Type OR between all the words you want: <span class="span-monospace">miniature OR
-                                    standard</span>
+                                    standard</span>.
                             </p>
                         </td>
                     </tr>
@@ -59,7 +59,7 @@
                         <td class="td-A"><input type="text" id="4th-input" name="as_eq"></td>
                         <td class="td-A">
                             <p>Put a minus sign just before words that you don't want: <span
-                                    class="span-monospace">-rodent, -"Jack Russell"</span></p>
+                                    class="span-monospace">-rodent, -"Jack Russell"</span>.</p>
                         </td>
                     </tr>
                     <tr>
@@ -70,7 +70,7 @@
                         <td class="td-A">
                             <p>Put two full stops between the numbers and add a unit of measurement: <span
                                     class="span-monospace">10..35 kg,
-                                    £300..£500, 2010..2011</span></p>
+                                    £300..£500, 2010..2011</span>.</p>
                         </td>
                     </tr>
                 </tbody>
