--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <form action="https://google.com/search">
                     <input id="search-bar" type="text" name="q">
                     <input class="search-btn" type="submit" value="Google Search">
-                    <input class="search-btn" type="submit" value="I'm Feeling Lucky">
+                    <input class="search-btn" name="btnI" type="submit" value="I'm Feeling Lucky">
                 </form>
             </div>
         </div>
